--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,17 @@
 
-
-<%= form_for @user do |f| %>
-  <%= f.label :name, "Name"  %> <br>
-  <%= f.text_field :name %> <br>
-  <%= f.label :email, "Email"  %> <br>
-  <%= f.text_field :email %> <br>
-  <%= f.label :password, "Passsword"  %> <br>
-  <%= f.password_field :password %> <br>
-  <%= f.label :home_location, "City and State"  %> <br>
-  <%= f.text_field :home_location %> <br>
-  <%= f.submit  %>
-<% end %>
+<div class="form-group container">
+  <div class="col-sm sign-up">
+  <h1>Sign Up</h1>
+  <%= form_for @user do |f|  %>
+    <%= f.label :name, "Name", class:"col-form-label" %> <br>
+    <%= f.text_field :name, class:"form-control" %> <br>
+    <%= f.label :email, "Email", class:"col-form-label"  %> <br>
+    <%= f.text_field :email, class:"form-control" %> <br>
+    <%= f.label :password, "Passsword"  %> <br>
+    <%= f.password_field :password , class:"form-control"%> <br>
+    <%= f.label :home_location, "City and State" , class:"col-form-label" %> <br>
+    <%= f.text_field :home_location, class:"form-control" %> <br>
+    <%= f.submit class:"btn btn-primary" %>
+  <% end %>
+  </div>
+</div>
