logout button created that will not show to users not logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
           <a class="nav-link" href="#">My Area</a>
         </li>
       </ul>
-      <a class="btn btn-outline-danger my-2 my-sm-0" href="#">Logout</a>
+      <% if session[:user_id] %>
+        <a class="btn btn-outline-danger my-2 my-sm-0" href="#">Logout</a>
+      <% end %>
       </div>
     </nav>
     <%= yield %>
