--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <% if session[:user_id] %>
         <li class="nav-item active">
           <a class="nav-link" href="#">Home
           <span class="sr-only">(current)</span></a>
@@ -32,9 +33,12 @@
         <li class="nav-item">
           <a class="nav-link" href="#">My Area</a>
         </li>
+        <% end %>
       </ul>
       <% if session[:user_id] %>
-        <a class="btn btn-outline-danger my-2 my-sm-0" href="#">Logout</a>
+        <a class="btn btn-outline-danger my-2 my-sm-0" href="/sessions/destroy">Logout</a>
+      <% else %>
+        <a class="btn btn-outline-danger my-2 my-sm-0" href="/users/new">Sign Up</a>
       <% end %>
       </div>
     </nav>
