--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,11 @@
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Log In</h1>
+    <p class="lead">Login to your account below. If you dont have an account. <a href="/users/new">Sign up for one here.</a></p>
+  </div>
+</div>
 <div class="form-group container">
   <div class="col-sm sign-up">
-  <h1>Please Login</h1>
   <%= form_for @user, url: login_path do |f|  %>
     <%= f.label :email, "Email", class:"col-form-label"  %> <br>
     <%= f.text_field :email, class:"form-control" %> <br>
@@ -8,4 +13,3 @@
     <%= f.password_field :password , class:"form-control" %> <br>
     <%= f.submit "Login", class:"btn btn-primary" %>
   <% end %>
-<h3><%= link_to "Or, create a new account", new_user_path%></h3>
