--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,15 +1,23 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">Log In</h1>
-    <p class="lead">Login to your account below. If you dont have an account. <a href="/users/new">Sign up for one here.</a></p>
+<div class="login" style=
+    "width: 30%;
+    float: right;
+    background: gainsboro;
+    position:relative;
+    margin-top: 5em;
+    z-index: 10;"
+>
+  <h2 style="padding-top: .5em;text-align: center;font-family: 'Pacifico', cursive;">Login</h2>
+  <div class="form-group container">
+    <div class="col-sm sign-up">
+    <%= form_for @user, url: login_path do |f|  %>
+      <%= f.label :email, "Email", class:"col-form-label"  %> <br>
+      <%= f.text_field :email, class:"form-control" %> <br>
+      <%= f.label :password, "Passsword"  %> <br>
+      <%= f.password_field :password , class:"form-control" %> <br>
+      <%= f.submit "Login", class:"btn btn-primary" %>
+    <% end %>
+  </div>
   </div>
 </div>
-<div class="form-group container">
-  <div class="col-sm sign-up">
-  <%= form_for @user, url: login_path do |f|  %>
-    <%= f.label :email, "Email", class:"col-form-label"  %> <br>
-    <%= f.text_field :email, class:"form-control" %> <br>
-    <%= f.label :password, "Passsword"  %> <br>
-    <%= f.password_field :password , class:"form-control" %> <br>
-    <%= f.submit "Login", class:"btn btn-primary" %>
-  <% end %>
+      <img class="d-block w-100" src="https://drscdn.500px.org/photo/66836869/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&web
+p=true&sig=68edea1f234910c5f5b5ca04f24fea1154f2d4e628a5775247d17068c558073c" alt="Second slide" style="position:absolute">
