--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -4,6 +4,7 @@
     background: gainsboro;
     position:relative;
     margin-top: 5em;
+    margin-right: .5em;
     z-index: 10;"
 >
   <h2 style="padding-top: .5em;text-align: center;font-family: 'Pacifico', cursive;">Login</h2>
@@ -19,7 +20,16 @@
   </div>
   </div>
 </div>
-<div class="image-container" style="position:absolute">
-  <img class="d-block w-100" src="https://drscdn.500px.org/photo/66836869/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&web
-p=true&sig=68edea1f234910c5f5b5ca04f24fea1154f2d4e628a5775247d17068c558073c" alt="Second slide" style="position:absolute">
+<div style="
+  position:absolute;">
+  <img class="d-block w-100" src="https://drscdn.500px.org/photo/113898659/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&we
+bp=true&sig=bf1fc2408dc2205ceef50e6151614940c278d36cc0a3d76e6919193f33e98564" alt="Second slide" style="opacity: 0.8">
+</div>
+<div style="margin: 7em 0 0 .5em;
+  z-index: 10;
+  position:relative;">
+  <h1 style="
+    font-family: 'Pacifico', cursive;
+    ">Welcome to Really Good Photos</h1>
+    <p>Login to your right our sign up for an account</p>
 </div>
