--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -14,7 +14,7 @@
           <li class="list-group-item">Vestibulum at eros</li>
         </ul>
         <div class="card-body">
-          <a href="<%= photo["image_url"] %>" class="card-link">photo link</a>
+          <%= link_to "photo link", photo_path(photo) %>
           <a href="#" class="card-link">Another link</a>
         </div>
       </div>
