updated the log in page to return an error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,22 +23,17 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <% if session[:user_id] %>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home
-          <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="/users">My Photos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My Area</a>
+          <a class="nav-link" href="/photos">My Area</a>
         </li>
         <% end %>
       </ul>
       <% if session[:user_id] %>
         <a class="btn btn-outline-danger my-2 my-sm-0" href="/sessions/destroy">Logout</a>
       <% else %>
-        <a class="btn btn-outline-primary my-2 my-sm-0" href="/" style="margin-right:1em">Log In</a>
         <a class="btn btn-outline-success my-2 my-sm-0" href="/users/new">Sign Up</a>
       <% end %>
       </div>
