--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -20,3 +20,14 @@
       </div>
   <% end %>
   </div>
+
+
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+      <li class="page-item"><%= link_to '1', photos_path(:page => 1), class: "page-link" %></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+  </nav>
