--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,9 +1,7 @@
 <h2>Photo page! <%= @photo.name %></h2>
-<div class="row">
-  <div class="col">
-    <iframe src="http://maps.google.com/maps?q=<%= @photo.latitude %>, <%= @photo.longitude %>&output=embed" width="360" height="270" frameborder="0" style="border:0"></iframe>
-  </div>
-  <div class="col">
-    <img class="card-img-top" src="<%= @photo.image_url %>" alt="<%= @photo.name %>">
-  </div>
+
+<div class="row align-items-center">
+  <div class="col-12 col-md-3">  <iframe src="http://maps.google.com/maps?q=<%= @photo.latitude %>, <%= @photo.longitude %>&output=embed" width="270" height="360" frameborder="0" style="border:0"></iframe></div>
+
+  <div class="col-6 col-md-">  <img class="card-img-top" src="<%= @photo.image_url %>" alt="<%= @photo.name %>"></div>
 </div>
