--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,17 +6,19 @@
   </div>
 </div>
 <div class="container">
-  <% @user.photos.each do |photo| %>
-    <div class="card" style="width: 20rem;">
-      <img class="card-img-top" src="<%= photo.image_url %>" alt="<%= photo.name %>">
-      <div class="card-body">
-        <h4 class="card-title"><%= photo.name %></h4>
-        <p class="card-text"><%= photo.description %></p>
+  <% if @user.photos %>
+    <% @user.photos.each do |photo| %>
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="<%= photo.image_url %>" alt="<%= photo.name %>">
+        <div class="card-body">
+          <h4 class="card-title"><%= photo.name %></h4>
+          <p class="card-text"><%= photo.description %></p>
+        </div>
+        <div class="card-body">
+          <a href="#" class="card-link">See Photo</a>
+          <a href="#" class="btn btn-danger" style="float: right;">Unsave</a>
+        </div>
       </div>
-      <div class="card-body">
-        <a href="#" class="card-link">See Photo</a>
-        <a href="#" class="btn btn-danger" style="float: right;">Unsave</a>
-      </div>
-    </div>
+    <% end %>
   <% end %>
 </div>
