--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,3 @@
-<div class="background">
-
   <div class="login" style=
       "width: 30%;
       float: right;
@@ -29,8 +27,7 @@
   </div>
   <div style="
     position:absolute;">
-    <img class="d-block w-100" src="https://drscdn.500px.org/photo/113898659/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&we
-  bp=true&sig=bf1fc2408dc2205ceef50e6151614940c278d36cc0a3d76e6919193f33e98564" alt="Second slide" style="opacity: 0.8">
+    <img src="https://drscdn.500px.org/photo/113898659/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&webp=true&sig=bf1fc2408dc2205ceef50e6151614940c278d36cc0a3d76e6919193f33e98564" alt="Second slide" style="opacity: 0.8">
   </div>
   <div style="margin: 7em 0 0 .5em;
     z-index: 10;
@@ -40,4 +37,3 @@
       ">Welcome to Really Good Photos</h1>
       <p>Login to your right or sign up for an account</p>
   </div>
-</div>
