--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -14,7 +14,7 @@
           <li class="list-group-item">Vestibulum at eros</li>
         </ul>
         <div class="card-body">
-          <%= link_to "photo link", photo_path(photo) %>
+          <p><%= link_to "photo link", photo_path(photo) %></p>
           <a href="#" class="card-link">Another link</a>
         </div>
       </div>
