moved homepage img to be a background image

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,3 +1,10 @@
+<style>
+  body {
+    background-image:url("https://drscdn.500px.org/photo/113898659/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&webp=true&sig=bf1fc2408dc2205ceef50e6151614940c278d36cc0a3d76e6919193f33e98564");
+  }
+
+</style>
+
   <div class="login" style=
       "width: 30%;
       float: right;
@@ -24,10 +31,6 @@
       <% end %>
       </div>
     </div>
-  </div>
-  <div style="
-    position:absolute;">
-    <img src="https://drscdn.500px.org/photo/113898659/m%3D1080_k%3D1_a%3D1/v2?client_application_id=44697&webp=true&sig=bf1fc2408dc2205ceef50e6151614940c278d36cc0a3d76e6919193f33e98564" alt="Second slide" style="opacity: 0.8">
   </div>
   <div style="margin: 7em 0 0 .5em;
     z-index: 10;
