--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,23 +6,27 @@
   </div>
 </div>
 <div class="container">
-  <% if @user.photos.count > 0 %>
+    <div class="row">
+    <% if @user.photos.count > 0 %>
     <% @user.photos.each do |photo| %>
-      <div class="card" style="width: 20rem;">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
         <img class="card-img-top" src="<%= photo.image_url %>" alt="<%= photo.name %>">
-        <div class="card-body">
-          <h4 class="card-title"><%= photo.name %></h4>
-          <p class="card-text"><%= photo.description %></p>
+          <div class="card-body">
+            <h4 class="card-title"><%=photo.name%></h4>
+          </div>
         </div>
         <div class="card-body">
+          <p><%= link_to "photo link", photo_path(photo) %></p>
           <a href="#" class="card-link">See Photo</a>
           <a href="#" class="btn btn-danger" style="float: right;">Unsave</a>
         </div>
       </div>
+    </div>
     <% end %>
   <% else %>
     <div class="alert alert-primary" role="alert">
       You don't have any photos saved yet. <a href="'/photos'"> Look at your local photos</a> and save them.
     </div>
   <% end %>
-</div>
