--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -11,8 +11,11 @@
       background: gainsboro;
       position:relative;
       margin-top: 5em;
-      margin-right: .5em;
-      z-index: 10;"
+      margin-right: 1em;
+      z-index: 10;
+      -webkit-border-radius: 25px;
+      -moz-border-radius: 25px;
+      border-radius: 25px;"
   >
     <h2 style="padding-top: .5em;text-align: center;font-family: 'Pacifico', cursive;">Login</h2>
     <div class="form-group container">
@@ -34,9 +37,11 @@
   </div>
   <div style="margin: 7em 0 0 .5em;
     z-index: 10;
-    position:relative;">
+    position:relative;
+    color:white;">
     <h1 style="
       font-family: 'Pacifico', cursive;
+      color:white;
       ">Welcome to Really Good Photos</h1>
       <p>Login to your right or sign up for an account</p>
   </div>
