attempt at destroy

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,8 +19,8 @@
         </div>
         <div class="card-body">
           <p><%= link_to "photo link", photo_path(photo) %></p>
-          <a href="#" class="card-link">See Photo</a>
-          <a href="#" class="btn btn-danger" style="float: right;">Unsave</a>
+          <a href="<%= photo.image_url %>" class="card-link">See Photo</a>
+          <%= link_to "Unsave", users_path, class = "btn btn-danger" style = "float" :method => 'delete' %>
         </div>
       </div>
     </div>
