commit for merge

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   <% else %>
     <div class="alert alert-primary" role="alert">
-      You don't have any photos saved yet. <a href="'/photos'"> Look at your local photos</a> and save them.
+      You don't have any photos saved yet. <a href="/photos"> Look at your local photos</a> and save them.
     </div>
   <% end %>
 </div>
