--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,33 +1,31 @@
 
   <div class="row">
   <% @photos.each do |photo| %>
-    <div class="col-sm">
-      <div class="card" style="width: 20rem;">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
         <img class="card-img-top" src="<%= photo["image_url"] %>" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card-body">
+            <h4 class="card-title"><%=photo.name%></h4>
+            <p class="card-text"><%=photo.description%></p>
+          </div>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
+
         <div class="card-body">
           <p><%= link_to "photo link", photo_path(photo) %></p>
-          <a href="#" class="card-link">Another link</a>
         </div>
       </div>
+    </div>
   <% end %>
-  </div>
+</div>
 
 
-  <nav aria-label="Page navigation example">
+  <!-- <nav aria-label="Page navigation example">
     <ul class="pagination">
       <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><%= link_to '1', photos_path(:page => 1), class: "page-link" %></li>
+      <li class="page-item"><#= link_to '1', photos_path(:page => 1), class: "page-link" %></li>
       <li class="page-item"><a class="page-link" href="#">2</a></li>
       <li class="page-item"><a class="page-link" href="#">3</a></li>
       <li class="page-item"><a class="page-link" href="#">Next</a></li>
     </ul>
-  </nav>
+  </nav> -->
