search function added

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,16 @@
-
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">Your Saved Photos</h1>
     <p class="lead">Below are all of your saved photos, <%= @user.name %>.</p>
   </div>
 </div>
+
+<%= form_tag("/search", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
 <div class="container">
     <div class="row">
     <% if @user.photos.count > 0 %>
