--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -4,6 +4,13 @@
     <p class="lead">These are all of the photos taken in your area, <%= @user.home_location %>.</p>
   </div>
 </div>
+
+<%= form_tag("/photos", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
   <div class="row">
   <% @photos[0..3].each do |photo| %>
     <div class="col-sm">
