--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
         <div class="card-body">
           <p><%= link_to "photo link", photo_path(photo) %></p>
           <a href="<%= photo.image_url %>" class="card-link">See Photo</a>
-          <%= link_to "Unsave", users_path, class = "btn btn-danger" style = "float" :method => 'delete' %>
+          <#= link_to "Unsave", users_path, class = "btn btn-danger" style = "float" :method => 'delete' %>
         </div>
       </div>
     </div>
