--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -24,7 +24,7 @@
 
         </div>
         <div class="card-body">
-          <%= link_to("See Photo", photo_path(photo), class: "card-link") %>
+          <%= link_to("See Photo", photo_path(photo), class: "btn btn-primary") %>
         </div>
       </div>
     </div>
