--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,15 +3,15 @@
     <h1 class="display-3">Photos in your area</h1>
     <p class="lead">These are all of the photos taken in your area, <%= params[:q] ? params[:q] : @user.home_location %>.</p>
     <%= form_tag("/photos", method: "get") do %>
-    <%= label_tag(:q, "Search for:") %>
+    <%= label_tag(:q, "Search for:", class: "lead" )%>
     <%= text_field_tag(:q) %>
-    <%= submit_tag("Search")%>
+    <%= submit_tag("Search", class: "lead")%>
     <% end %>
-    <p class="lead">Categories</p>
+    <p class="lead">Categories:</p>
     <div class="row" style="margin-top: 20px">
       <div class="col col-sm-auto">
-        <% @category_name_array.each do |name| %>
-        <button class="btn btn-primary" type="submit"><%= name %></button>
+        <% @category_name_array.each do |category| %>
+        <button name="button" class="btn btn-primary" type="submit"><%= category %></button>
         <% end %>
       </div>
     </div>
@@ -24,14 +24,14 @@
     <div class="col-md-4" style="margin-bottom: 10px">
       <div class="card">
         <div class="card-block">
-        <img class="card-img-top img_thumbnail" src="<%= photo.image_url %>" alt="<%= photo.name %>">
+        <img class="card-img-top img-responsive" src="<%= photo.image_url %>" alt="<%= photo.name %>">
           <div class="card-body">
             <h4 class="card-title"><%=photo.name%></h4>
           </div>
         </div>
         <div class="card-body">
           <%# byebug %>
-          <%= link_to "See Photo", photo_url(photo), class: "card-link" %>
+          <%= link_to "See Photo", photo_url(photo), class: "btn btn-primary" %>
         </div>
       </div>
     </div>
