created a filter button on the user page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,3 +5,15 @@
 .sign_up {
   width:50%
 }
+
+.category-filter {
+  float:right;
+  padding-right: 1em;
+}
+.right{
+  float:right
+}
+
+.photo_filter {
+  width:100%
+}
