--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,20 @@
     <p class="lead">Below are all of your saved photos, <%= @user.name %>.</p>
   </div>
 </div>
-
+<div class="photo_filter">
+  <div class="category-filter">
+    <% if @user.photos.count > 0 %>
+    <%= form_tag("/users", method: "get") do %>
+    <%= select_tag(:category_id, options_from_collection_for_select(@categories, :id, :name)) %>
+    <%= submit_tag("Filter") %>
+    <% end %> <br>
+    <a href="/users" class="btn btn-primary right">Reset</a>
+  </div>
+</div>
+<br>
 <div class="container">
     <div class="row" >
-    <% if @user.photos.count > 0 %>
-    <% @user.photos.each do |photo| %>
+    <% @photos.each do |photo| %>
     <div class="col-sm-4", style="margin-bottom: 30px">
       <div class="card">
         <div class="card-block">
