--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>ReallyGoodPhotos</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -11,13 +12,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link rel="stylesheet" href="../../assets/stylesheets/users.scss">
   <!-- Custom CSS -->
-  
+
   </head>
 
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <span class="navbar-brand" style="font-family: 'Pacifico', cursive;" >Really Good Photos</span>
+      <span class="navbar-brand" >Really Good Photos</span>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
