--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,12 +6,20 @@
 </div>
 <div class="photo_filter">
   <div class="category-filter">
+    <p>
     <% if @user.photos.count > 0 %>
-    <%= form_tag("/users", method: "get") do %>
-    <%= select_tag(:category_id, options_from_collection_for_select(@categories, :id, :name)) %>
-    <%= submit_tag("Filter") %>
-    <% end %> <br>
-    <a href="/users" class="btn btn-primary right">Reset</a>
+    <ul class="nav justify-content-end">
+      <li class="filter" >
+        <%= form_tag("/users", method: "get") do %>
+        <%= select_tag(:category_id, options_from_collection_for_select(@categories, :id, :name)) %>
+        <%= submit_tag("Filter", class:"btn btn-primary") %>
+        <% end %>
+        <p></p>
+      </li>
+      <li class="filter">
+        <a href="/users" class="btn btn-secondary">Reset</a>
+      </li>
+    </ul>
   </div>
 </div>
 <br>
