API brings data in differently. Fixed the way urls are assigned

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -14,3 +14,9 @@
   flex-wrap: wrap;
   margin-right: -15px;
 }
+
+#map {
+        width: 270;
+        height: 310;
+        background-color: grey;
+      }
