fixed small css styling

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -27,6 +27,11 @@
   padding-right:2em;
 }
 
+
+
 .filter {
-  padding-right:.3em
+  padding-right:.3em;
+  margin: 0 0 0 30%;
+  display: block;
+  float: right;
 }
